--- a/suggestion_box/index.html
+++ b/suggestion_box/index.html
@@ -7,30 +7,9 @@
     <script type="text/javascript" src="js/vendor/angular-route.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body ng-app="SuggestionBox" ng-controller="HomeController">
+<body ng-app="SuggestionBox">
 
-    <div class="jumbotron">
-        <h1>{{ helloWorld }}</h1>
-
-        <div ng-repeat="post in posts | orderBy:'-upvotes'">
-            <h2>{{ post.title }}</h2>
-            <p>
-                <span class="glyphicon glyphicon-plus-sign" ng-click="upVote(post)"></span>
-                Upvotes: {{post.upvotes}}
-            </p>
-            <div ng-repeat="comment in post.comments">
-                <p>{{ comment }}</p>
-            </div>
-        </div>
-
-        <form ng-submit="addSuggestion()" style="margin-top: 50px" class="col-xs-5">
-            <h3> Добавить собственный совет</h3>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Добавляйте свою идею сюда!" ng-model="title"/>
-            </div>
-            <button type="submit" class="btn btn-primary">Добавить идею</button>
-        </form>
-    </div>
+    <div ng-view></div>
 
 
     <!-- Modules -->
@@ -38,6 +17,7 @@
 
     <!-- Controllers -->
     <script type="text/javascript" src="js/controllers/HomeController.js"></script>
+    <script type="text/javascript" src="js/controllers/SuggestionController.js"></script>
 
     <!-- Services -->
     <script type="text/javascript" src="js/services/suggestions.js"></script>
